frontend-assignment-pixbay/style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 10px;
}

#photos {
    text-align: center;
}

img {
    width: 200px; /* width of container */
    height: 200px; /* height of container */
    object-fit: cover;

    padding: 0px;
    margin-left: 2px;
    margin-right: 2px;
    border: 5px solid white;
    background-color: antiquewhite; /* so that you can see pictures with no background */
}

figcaption {
    width: 200px;

    padding: 0px;
    margin-top: -10px;
    margin-left: 2px;
    margin-right: 2px;
    border: 5px solid white;
    background-color: white;
}

body {
    background-image: url(background.jpg);
    display: grid;
    grid-template-areas:
        "header"
        "search"
        "gallery"
        "pages";
}

h1 {
    grid-area: header;
    text-align: center;
    font-size: 300%;
}

.search-options {
    grid-area: search;
    text-align: center;
}

.gallery {
    grid-area: gallery;
    align-items: center;
    justify-content: space-around;
}

#photos {
    display: grid;
    grid-template-columns: repeat(auto-fill, 205px);
    justify-content: center;
}

.page-options {
    grid-area: pages;
    text-align: center;
}

